4-0 test for IE

--- a/app/views/4-0/manual-home.html
+++ b/app/views/4-0/manual-home.html
@@ -82,6 +82,10 @@
                 {% endfor %}
             {% endfor %}
 
+            <!-- NEW -->
+            <p>_manualHasUpdates = {{_manualHasUpdates}}</p>
+            <p>myData.updatesFilter = {{myData.updatesFilter}}</p>
+
             {% if _manualHasUpdates and myData.updatesFilter == "true" %}
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds" >
