--- a/app/views/4-0/manual-page.html
+++ b/app/views/4-0/manual-page.html
@@ -104,6 +104,10 @@
                     {% endfor %}
                 {% endfor %}
 
+                <!-- NEW -->
+                <p>_sectionHasUpdates = {{_sectionHasUpdates}}</p>
+                <p>myData.updatesFilter = {{myData.updatesFilter}}</p>
+
                 {% if _sectionHasUpdates and myData.updatesFilter == "true" %}
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds" >
