default data changed temporarily to cope with IE session bug

--- a/app/views/4-0/manual-home.html
+++ b/app/views/4-0/manual-home.html
@@ -83,8 +83,8 @@
             {% endfor %}
 
             <!-- NEW -->
-            <p>_manualHasUpdates = {{_manualHasUpdates}}</p>
-            <p>myData.updatesFilter = {{myData.updatesFilter}}</p>
+            <!-- <p>_manualHasUpdates = {{_manualHasUpdates}}</p>
+            <p>myData.updatesFilter = {{myData.updatesFilter}}</p> -->
 
             {% if _manualHasUpdates and myData.updatesFilter == "true" %}
             <div class="govuk-grid-row">
