--- a/app/views/4-0/manual-page.html
+++ b/app/views/4-0/manual-page.html
@@ -105,8 +105,8 @@
                 {% endfor %}
 
                 <!-- NEW -->
-                <p>_sectionHasUpdates = {{_sectionHasUpdates}}</p>
-                <p>myData.updatesFilter = {{myData.updatesFilter}}</p>
+                <!-- <p>_sectionHasUpdates = {{_sectionHasUpdates}}</p>
+                <p>myData.updatesFilter = {{myData.updatesFilter}}</p> -->
 
                 {% if _sectionHasUpdates and myData.updatesFilter == "true" %}
                 <div class="govuk-grid-row">
