400 link to email subscription

--- a/app/views/4-0/manual-home.html
+++ b/app/views/4-0/manual-home.html
@@ -56,7 +56,7 @@
                 <!-- </div>
             </div> -->
 
-            <!-- <p><a href="rules-list" class="govuk-link govuk-link--no-visited-state">Sign up for email alerts</a> for rule changes.</p> -->
+            <p class="govuk-body"><a href="https://www.gov.uk/email-signup/?topic=/education/apprenticeships-funding" class="govuk-link govuk-link--no-visited-state">Sign up for email alerts</a> for changes to the apprenticeships funding topic page.</p><br>
 
             {% set _manualHasUpdates = false %}
             {% for section in _thisManual.sections %}
