--- a/app/views/4-0/manual-setup.html
+++ b/app/views/4-0/manual-setup.html
@@ -37,7 +37,7 @@
                 </li>
             </ul> -->
 
-            <h1 class="govuk-heading-l">Custom setup - manual</h1>
+            <h1 class="govuk-heading-l">Manual</h1>
             <fieldset>
 
                 <!-- TODO different settings  for employer and provider -->
@@ -90,7 +90,7 @@
                 </div>
 
                 <p class="govuk-body" id="start-url" style="display:none">
-                    <a href="" class="govuk-button">Start prototype</a>
+                    <a href="" class="govuk-button">Start manual prototype</a>
                 </p>
                 <p class="govuk-body" >
                     <span class="govuk-!-font-weight-bold">Shareable link:</span><br>
@@ -107,6 +107,12 @@
                 <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
             </fieldset>
+            <h1 class="govuk-heading-l">Email updates</h1>
+            <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
+                <li><a href="subscribe-email?emailUpdates=1" class="govuk-link govuk-link--no-visited-state">Email with 1 update</a></li>
+                <li><a href="subscribe-email?emailUpdates=2" class="govuk-link govuk-link--no-visited-state">Email with 2 updates</a></li>
+                <li><a href="subscribe-email?emailUpdates=3" class="govuk-link govuk-link--no-visited-state">Email with updates to more than 1 manual</a></li>
+            </ul>
         </form>
     </div>
 </div>
