--- a/app/views/includes/manual-header.html
+++ b/app/views/includes/manual-header.html
@@ -3,19 +3,19 @@
     <div class="gem-c-breadcrumbs govuk-breadcrumbs" >
         <ol class="govuk-breadcrumbs__list">
             <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="#">Home</a>
+                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk">Home</a>
             </li>
             <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="#">Education, training and skills</a>
+                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education">Education, training and skills</a>
             </li>
             <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="#">Further and higher education, skills and vocational training</a>
+                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/further-and-higher-education-skills-and-vocational-training">Further and higher education, skills and vocational training</a>
             </li>
             <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="#">Further education funding</a>
+                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/further-education-funding">Further education funding</a>
             </li>
             <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="#">Apprenticeships funding</a>
+                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/apprenticeships-funding">Apprenticeships funding</a>
             </li>
         </ol>
     </div>
