restructured index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,58 +5,19 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototype</h1>
-        <ul class="govuk-list govuk-!-font-size-19">
+        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
             <li>
                 <a href="/4-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-4-0</a>
             </li>
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <li>V-3-0
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
-                    <li>
-                        <span class="govuk-!-font-weight-bold">Training Provider Rules Manuals</span><br>
-                        <a href="/3-0/manual-home?manual=providers-manual-original&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                        <a href="/3-0/google?manual=providers-manual-original&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a><br>
-                        <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content + flowchart</a><br>
-                        <a href="/3-0/manual-home?manual=providers-manual-original&textflow=true&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content + text decision
-                            tree</a><br>
-                        <a href="/3-0/manual-home?manual=providers-manual-2&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content + updated english
-                            & maths content</a>
-                    </li>
-                    <li>
-                        <span class="govuk-!-font-weight-bold">Employer Rules Manuals</span><br>
-                        <a href="/3-0/manual-home?manual=employers-manual-original&resetSession=true"
-                            class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                        <a href="/3-0/google?manual=employers-manual-original&resetSession=true" class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a>
-                    </li>
-                    <li>
-                        <span class="govuk-!-font-weight-bold">Training Provider Rules Heavy Edit</span><br>
-                        <a href="/3-0/guidance?resetSession=true" class="govuk-link govuk-link--no-visited-state">Funding
-                            for training apprentices in England (Heavy edit)</a>
-                    </li>
-                </ul>
+            <li>
+                <a href="/3-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-3-0</a> (tested: 10-21/12/2018)
             </li>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <li>V-2-0
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
-                    <li>
-                        <a href="/prototypes/round-2/index" class="govuk-link govuk-link--no-visited-state">Employer
-                            Funding Rules</a> (tested: 13-22/11/2018)
-                    </li>
-                </ul>
+            <li>
+                <a href="/prototypes/round-2/index" class="govuk-link govuk-link--no-visited-state">V-2-0</a> (tested: 13-22/11/2018)
             </li>
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <li>V-1-0
-                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
-                    <li>
-                        <a href="/prototypes/round-1/index" class="govuk-link govuk-link--no-visited-state">Employer
-                            Funding Rules</a> (tested: 22-29/10/2018)
-                    </li>
-                </ul>
+            <li>
+                <a href="/prototypes/round-1/index" class="govuk-link govuk-link--no-visited-state">V-1-0</a> (tested: 22-29/10/2018)
             </li>
         </ul>
     </div>
