--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,6 +7,9 @@
         <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototype</h1>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
             <li>
+                <a href="/5-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-5-0</a>
+            </li>
+            <li>
                 <a href="/4-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-4-0</a>
             </li>
             <li>
