CCW-496 plus subscription emails tweaks

--- a/app/views/5-0/manual-setup.html
+++ b/app/views/5-0/manual-setup.html
@@ -110,7 +110,7 @@
             <h1 class="govuk-heading-l">Email updates</h1>
             <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
                 <li><a href="subscribe-email?emailUpdates=1" class="govuk-link govuk-link--no-visited-state">Email with 1 update</a></li>
-                <li><a href="subscribe-email?emailUpdates=2" class="govuk-link govuk-link--no-visited-state">Email with 2 updates</a></li>
+                <li><a href="subscribe-email?emailUpdates=2" class="govuk-link govuk-link--no-visited-state">Email with 2 updates (weekly update)</a></li>
                 <li><a href="subscribe-email?emailUpdates=3" class="govuk-link govuk-link--no-visited-state">Email with updates to more than 1 manual</a></li>
             </ul>
         </form>
