--- a/app/views/5-0/manual-home.html
+++ b/app/views/5-0/manual-home.html
@@ -34,8 +34,10 @@
 
 <div id="manuals-frontend" class="manuals-frontend-body inner-block">
     
-    {% set _manualHeaderTitle = _thisManual.title|safe + " " + _thisManual.date|safe %}
-    {% include "../includes/manual-header.html" %}
+    {% set _manualHeaderTitle = _thisManual.title|safe %}
+    {% set _manualSubTitle = _thisManual.date|safe + ", " + _thisManual.version|lower %}
+    {#  {% set _manualSubTitle = "2018–2019, version 3" %}  #}
+    {% include "../includes/manual-header-2.html" %}
       
     <ol class="breadcrumb-trail">
         <li class="no-separator">Contents</li>
