--- a/app/views/5-0/manual-setup.html
+++ b/app/views/5-0/manual-setup.html
@@ -107,6 +107,10 @@
                 <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
             </fieldset>
+            <h1 class="govuk-heading-l">Guidance (heavy edit)</h1>
+            <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
+                <li><a href="guidance?resetSession=true" class="govuk-link govuk-link--no-visited-state">Funding for training apprentices in England</a></li>
+            </ul>
             <h1 class="govuk-heading-l">Email updates</h1>
             <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
                 <li><a href="subscribe-email?emailUpdates=1" class="govuk-link govuk-link--no-visited-state">Email with 1 update</a></li>
