--- a/app/views/5-0/manual-setup.html
+++ b/app/views/5-0/manual-setup.html
@@ -5,42 +5,23 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <form method="POST">
-            <!-- <h1 class="govuk-heading-l">Quick links - manuals</h1>
-            <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
-                <li>
-                    <span class="govuk-!-font-weight-bold">Training Provider</span><br>
-                    <a href="manual-home?manual=providers-manual-original&resetSession=true"
-                        class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                    <a href="google?manual=providers-manual-original&resetSession=true"
-                        class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a><br>
-                    <a href="manual-home?manual=providers-manual-original&svgflow=true&resetSession=true"
-                        class="govuk-link govuk-link--no-visited-state">original PDF content + flowchart</a><br>
-                    <a href="manual-home?manual=providers-manual-original&textflow=true&resetSession=true"
-                        class="govuk-link govuk-link--no-visited-state">original PDF content + text decision
-                        tree</a><br>
-                    <a href="manual-home?manual=providers-manual-2&resetSession=true"
-                        class="govuk-link govuk-link--no-visited-state">original PDF content + updated english
-                        & maths content
-                    </a>
-                    <br><span style="margin-left:20px;">- includes contextual updates</span>
-                </li>
-                <li>
-                    <span class="govuk-!-font-weight-bold">Employer </span><br>
-                    <a href="manual-home?manual=employers-manual-original&resetSession=true"
-                        class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                    <a href="google?manual=employers-manual-original&resetSession=true" class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a>
-                </li>
-                <li>
-                    <span class="govuk-!-font-weight-bold">Training Provider Heavy Edit</span><br>
-                    <a href="guidance?resetSession=true" class="govuk-link govuk-link--no-visited-state">Funding
-                        for training apprentices in England (Heavy edit)</a>
-                </li>
-            </ul> -->
 
             <h1 class="govuk-heading-l">Manual</h1>
             <fieldset>
 
                 <!-- TODO different settings  for employer and provider -->
+
+                <!-- Start from -->
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="manualSetupStartFrom">
+                        Start journey from
+                    </label>
+                    <select class="govuk-select" id="manualSetupStartFrom" name="manualSetupStartFrom" data-option="manualSetupStartFrom">
+                        <option {% if myData.startFrom == 'manual-home' %}selected{% endif %} value="manual-home">Manual homepage</option>
+                        <option {% if myData.startFrom == 'google' %}selected{% endif %} value="google">Google</option>
+                        <option {% if myData.startFrom == 'rules-list' %}selected{% endif %} value="rules-list">Collections list</option>
+                    </select>
+                </div>
             
                 <!-- Manual main content -->
                 <div class="govuk-form-group">
@@ -52,6 +33,7 @@
                         <option {% if myData.manual == key %}selected{% endif %} value="{{key}}">{{item.name}}</option>
                         {% endfor %}
                     </select>
+                    <p id="manual-latest-message" class="govuk-body" style="color: red; display: none">Will use latest manual content available</p>
                 </div>
                 
                 <!-- english maths flowchart none/svg/text -->
@@ -61,8 +43,8 @@
                     </label>
                     <select class="govuk-select" id="manualSetupEngMathsChart" name="manualSetupEngMathsChart" data-option="manualSetupEngMathsChart">
                         <option {% if myData.emChart == 'false' %}selected{% endif %} value="false">None</option>
-                        <option {% if myData.emChart == 'svgflow' %}selected{% endif %} value="svgflow">Graphical chart</option>
-                        <option {% if myData.emChart == 'textflow' %}selected{% endif %} value="textflow">Text decision tree</option>
+                        <option {% if myData.emChart == 'svgflow' %}selected{% endif %} value="svgflow">Graphical chart (if available)</option>
+                        <option {% if myData.emChart == 'textflow' %}selected{% endif %} value="textflow">Text decision tree (if available)</option>
                     </select>
                 </div>
 
@@ -76,18 +58,6 @@
                         <option {% if myData.updatesFilter == 'true' %}selected{% endif %} value="true">On (if data available)</option>
                     </select>
                 </div>
-                
-                <!-- Start from -->
-                <div class="govuk-form-group">
-                    <label class="govuk-label" for="manualSetupStartFrom">
-                        Start journey from
-                    </label>
-                    <select class="govuk-select" id="manualSetupStartFrom" name="manualSetupStartFrom" data-option="manualSetupStartFrom">
-                        <option {% if myData.startFrom == 'manual-home' %}selected{% endif %} value="manual-home">Manual homepage</option>
-                        <option {% if myData.startFrom == 'google' %}selected{% endif %} value="google">Google</option>
-                        <option {% if myData.startFrom == 'rules-list' %}selected{% endif %} value="rules-list">Collections list</option>
-                    </select>
-                </div>
 
                 <p class="govuk-body" id="start-url" style="display:none">
                     <a href="" class="govuk-button">Start manual prototype</a>
@@ -96,13 +66,6 @@
                     <span class="govuk-!-font-weight-bold">Shareable link:</span><br>
                     <span class="govuk-body" id="start-url-label" style="display:none"></span>
                 </p>
-                
-
-                <!-- TODO if google selected - make sure links on rules list page match the correct manual content -->
-
-                <!-- <button type="submit" class="govuk-button">
-                    Start
-                </button> -->
 
                 <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
@@ -129,15 +92,27 @@
 $(document).ready(function(){
     var _startURL = $("#start-url a"),
         _startURLLabel = $("#start-url-label"),
-        _options = $("[data-option]")
+        _options = $("[data-option]"),
+        _latestMessage = $("#manual-latest-message")
 
     _options.change(function(){
 
+        //if google or collections selected then hide manual choice
+        var _startFromVal = _options.filter("#manualSetupStartFrom").val(),
+            _useLatestManual = (_startFromVal == "google" || _startFromVal == "rules-list")
+        if(_useLatestManual){
+            _options.filter("#manualSetupManual").hide()
+            _latestMessage.show()
+        } else {
+            _options.filter("#manualSetupManual").show()
+            _latestMessage.hide()
+        }
+
         //update url text
         var _urlVersion = "https://employer-funding-rules.herokuapp.com/" + {{myData.version|dump|safe}} + "/",
-            _urlPage = _options.filter("#manualSetupStartFrom").val() + "?",
-            _urlstartFrom = "&startFrom=" + _options.filter("#manualSetupStartFrom").val(),
-            _urlmanual = "&manual=" + _options.filter("#manualSetupManual").val(),
+            _urlPage = _startFromVal + "?",
+            _urlstartFrom = "&startFrom=" + _startFromVal,
+            _urlmanual = (!_useLatestManual ? ("&manual=" + _options.filter("#manualSetupManual").val()) : ""),
             _urlupdatesFilter = "&updatesFilter=" + _options.filter("#manualSetupContextualUpdates").val(),
             _urlemChart = "&emChart=" + _options.filter("#manualSetupEngMathsChart").val(),
             _urlReset = "&resetSession=true",
