--- a/app/views/5-0/manual-home.html
+++ b/app/views/5-0/manual-home.html
@@ -45,8 +45,6 @@
       
     <article aria-labelledby="manual-title" id="content">
         <div class="manual-body">
-
-            <p class="summary">{{_thisManual.intro|safe}} {{_thisManual.interest|safe}}</p>
             
             <!-- <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds" > -->
@@ -58,7 +56,7 @@
                 <!-- </div>
             </div> -->
 
-            <p class="govuk-body"><a href="https://www.gov.uk/email-signup/?topic=/education/apprenticeships-funding" class="govuk-link govuk-link--no-visited-state">Sign up for email alerts</a> for changes to the apprenticeships funding topic page.</p><br>
+            <p class="govuk-body"><a href="https://www.gov.uk/email-signup/?topic=/education/apprenticeships-funding" class="govuk-link govuk-link--no-visited-state">Sign up for email alerts</a> for changes to the apprenticeships funding topic page.</p>
 
             {% set _manualHasUpdates = false %}
             {% for section in _thisManual.sections %}
@@ -89,6 +87,7 @@
             <p>myData.updatesFilter = {{myData.updatesFilter}}</p> -->
 
             {% if _manualHasUpdates and myData.updatesFilter == "true" %}
+            <br>
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds" >
                     <!-- <div class="govuk-form-group"> -->
