--- a/app/views/5-0/manual-home.html
+++ b/app/views/5-0/manual-home.html
@@ -153,9 +153,11 @@
                 <li class=" {{_sectionClasses}} ">
                     <a class="" href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}&updatesFilterOn=false">
                         <span class="subsection-title-text">{{section.title|safe}}</span>
-                        <!-- <span class="subsection-summary">
-                            Description goes here
-                        </span> -->
+                        {% if section.summary %}
+                        <span class="subsection-summary">
+                            {{section.summary|safe}}
+                        </span>
+                        {% endif %}
                         <strong class="update-tag govuk-tag" style="margin-right: 5px; background: #005ea5">
                             Edited in 2018
                         </strong>
