--- a/app/views/includes/manual-header-2.html
+++ b/app/views/includes/manual-header-2.html
@@ -1,5 +1,3 @@
-{% set _manualHeaderTitle = _manualHeaderTitle or "Manual title" %}
-{% set _manualSubTitle = _manualSubTitle or "" %}
 <div class="gem-c-contextual-breadcrumbs" style="margin-top:-20px">
     <div class="gem-c-breadcrumbs govuk-breadcrumbs" >
         <ol class="govuk-breadcrumbs__list">
@@ -23,8 +21,8 @@
 </div>
 <header aria-labelledby="manual-title" class="">
     <div class="primary">
-        <h1 id="manual-title" {% if _manualSubTitle != '' %}style="padding-bottom:10px"{% endif %}>{{_manualHeaderTitle}}</h1>
-        <h2 class="govuk-heading-m" style="color:white">{{_manualSubTitle}}</h2>
+        <h1 id="manual-title" {% if _manualSubTitle != '' %}style="padding-bottom:10px"{% endif %}>{{_thisManual.title|safe}}</h1>
+        <h2 class="govuk-heading-m" style="color:white">{{_thisManual.date|safe}}, {{_thisManual.version|lower|safe}}</h2>
         <div class="gem-c-metadata" data-module="gem-toggle">
             <dl>
                 <dt class="gem-c-metadata__term">From:</dt>
