CCW-400 new variant of email added

--- a/app/views/5-0/manual-setup.html
+++ b/app/views/5-0/manual-setup.html
@@ -78,7 +78,8 @@
             <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
                 <li><a href="subscribe-email?emailUpdates=1" class="govuk-link govuk-link--no-visited-state">Email with 1 update</a></li>
                 <li><a href="subscribe-email?emailUpdates=2" class="govuk-link govuk-link--no-visited-state">Email with 2 updates (weekly update)</a></li>
-                <li><a href="subscribe-email?emailUpdates=3" class="govuk-link govuk-link--no-visited-state">Email with updates to more than 1 manual</a></li>
+                <li><a href="subscribe-email?emailUpdates=3" class="govuk-link govuk-link--no-visited-state">Email with different updates to more than 1 manual</a></li>
+                <li><a href="subscribe-email?emailUpdates=4" class="govuk-link govuk-link--no-visited-state">Email with same update to more than 1 manual</a></li>
             </ul>
         </form>
     </div>
