--- a/app/views/6-0/rules-list.html
+++ b/app/views/6-0/rules-list.html
@@ -202,16 +202,13 @@
               aria-current="false" href="#">Education, training and skills</a>
           </li>
           <li class="govuk-breadcrumbs__list-item" aria-current="false">
-            <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Further
-              and higher education, skills and vocational training</a>
+            <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Further and higher education, skills and vocational training</a>
           </li>
           <li class="govuk-breadcrumbs__list-item" aria-current="false">
-            <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Further
-              education funding</a>
+            <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Further education funding</a>
           </li>
           <li class="govuk-breadcrumbs__list-item" aria-current="false">
-            <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Apprenticeships
-              funding</a>
+            <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/apprenticeships-funding">Apprenticeships funding</a>
           </li>
         </ol>
       </div>
@@ -221,25 +218,23 @@
 
       <div class="grid-row">
         <div class="column-two-thirds">
-          <div class="gem-c-title
-  
-  gem-c-title--margin-bottom-5">
+          <div class="gem-c-title gem-c-title--margin-bottom-5">
             <p class="gem-c-title__context">
               Guidance
             </p>
             <h1 class="gem-c-title__text gem-c-title__text--long">
-              Apprenticeship funding and performance management rules 2018 to 2019
+              Apprenticeship funding and performance management rules, August 2018 to July 2019
             </h1>
           </div>
-
         </div>
-
-
         <div class="column-two-thirds">
-
+          
           <p class="gem-c-lead-paragraph ">
-            The rules that will apply to all apprenticeship provision funded by the ESFA.
+            The rules that will apply to all apprenticeship provision funded by the ESFA. The funding rules cover the period August 2018 to July 2019 and apply to all apprenticeship programmes starting on or after 1 August 2018. This includes both apprenticeship frameworks and standards.
           </p>
+          <!-- <p class="gem-c-lead-paragraph ">
+            For rules that cover previous periods <a href="">[page with links to all years]</a>.
+          </p> -->
 
         </div>
       </div>
@@ -274,9 +269,6 @@
         </div>
       </div>
 
-
-
-
       <div class="grid-row">
         <div class="column-two-thirds responsive-bottom-margin">
           <div class="app-c-important-metadata app-c-important-metadata--bottom-margin">
@@ -285,16 +277,98 @@
               <dd class="app-c-important-metadata__definition">England</dd>
             </dl>
           </div>
-
           <div class="responsive-bottom-margin">
-            <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">Documents</h2>
-
-
+            <!-- <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
+              Documents
+            </h2> -->
             <div aria-labelledby="documents-title">
-
               <div class="gem-c-govspeak govuk-govspeak direction-ltr">
 
-                <!-- EMPLLOYERS -->
+                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
+                  Training providers
+                </h2>
+
+                <!-- PROVIDERS -->
+                {% set _providerManual = myData.latestProviderManual %}
+                {% if myData.useLatestManual == "false" %}
+                  {% if myData.manuals[myData.manual].type == "provider" %}
+                    {% set _providerManual = myData.manuals[myData.manual].id %}
+                  {% endif %}
+                {% endif %}
+                
+                <section class="attachment embedded" id="attachment_2875833">
+                  <div class="attachment-thumb">
+                    <a aria-hidden="true" class="thumbnail" href="manual-home?manual={{_providerManual}}"><img
+                        alt="" src="/public/images/pub-cover-html.png"></a>
+                  </div>
+                  <div class="attachment-details">
+                    <h2 class="title"><a href="manual-home?manual={{_providerManual}}">Apprenticeship funding rules for training providers, August 2018 to July 2019</a></h2>
+                    <p class="metadata">
+                      <span class="type">HTML</span>
+                    </p>
+                  </div>
+                </section>
+                <section class="attachment embedded" id="attachment_2875834">
+                    <div class="attachment-thumb">
+                      <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
+                    </div>
+                    <div class="attachment-details">
+                      <h2 class="title"><a aria-describedby="attachment-2875834-accessibility-help" href="/public/downloads/1819_Provider_Rules_v1.0.pdf">PDF: Apprenticeship funding rules for training providers, August 2018 to July 2019</a></h2>
+                      <p class="metadata">
+                        <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">2.3MB</span>,
+                        <span class="page-length">72 pages</span>
+                      </p>
+  
+                      <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
+                        <h2>This file may not be suitable for users of assistive technology.
+                          <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
+                            data-expanded="false">Request an accessible format.</a>
+                        </h2>
+                        <p id="attachment-2875834-accessibility-request" class="js-hidden">
+                          If you use assistive technology (such as a screen reader) and need a
+                          version of this document in a more accessible format, please email <a href="#">sde.servicedesk@education.gov.uk</a>.
+                          Please tell us what format you need. It will help us if you say what assistive technology you
+                          use.
+  
+                        </p>
+                      </div>
+                    </div>
+                </section>
+                <!-- Performace mgmt rules -->
+                <section class="attachment embedded" id="attachment_2875835">
+                    <div class="attachment-thumb">
+                      <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
+                    </div>
+                    <div class="attachment-details">
+                      <h2 class="title"><a href="#">
+                        PDF: Apprenticeship performance-management rules for training providers, August 2018 to July 2019
+                        </a></h2>
+                      <p class="metadata">
+                        <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">633KB</span>,
+                        <span class="page-length">16 pages</span>
+                      </p>
+                      <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
+                          <h2>This file may not be suitable for users of assistive technology.
+                            <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
+                              data-expanded="false">Request an accessible format.</a>
+                          </h2>
+                          <p id="attachment-2875834-accessibility-request" class="js-hidden">
+                            If you use assistive technology (such as a screen reader) and need a
+                            version of this document in a more accessible format, please email <a href="#">sde.servicedesk@education.gov.uk</a>.
+                            Please tell us what format you need. It will help us if you say what assistive technology you
+                            use.
+    
+                          </p>
+                        </div>
+  
+                    </div>
+                  </section>
+
+                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
+                    Employers
+                  </h2>
+
+                <!-- EMPLOYERS -->
                 {% set _employerManual = myData.latestEmployerManual %}
                 {% if myData.useLatestManual == "false" %}
                   {% if myData.manuals[myData.manual].type == "employer" %}
@@ -305,10 +379,10 @@
                 <section class="attachment embedded" id="attachment_2875831">
                   <div class="attachment-thumb">
                     <a aria-hidden="true" class="thumbnail" href="manual-home?manual={{_employerManual}}"><img
-                        alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
+                        alt="" src="/public/images/pub-cover-html.png"></a>
                   </div>
                   <div class="attachment-details">
-                    <h2 class="title"><a href="manual-home?manual={{_employerManual}}">Apprenticeship funding: rules and guidance for employers</a></h2>
+                    <h2 class="title"><a href="manual-home?manual={{_employerManual}}">Apprenticeship funding rules for employers, August 2018 to July 2019</a></h2>
                     <p class="metadata">
                       <span class="type">HTML</span>
                     </p>
@@ -320,7 +394,9 @@
                       <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
                     </div>
                     <div class="attachment-details">
-                      <h2 class="title"><a aria-describedby="attachment-2875834-accessibility-help" href="/public/downloads/1819_Employer_Rules_v1.0.pdf">Apprenticeship funding: rules and guidance for employers</a></h2>
+                      <h2 class="title"><a aria-describedby="attachment-2875834-accessibility-help" href="/public/downloads/1819_Employer_Rules_v1.0.pdf">
+                        PDF: Apprenticeship funding rules for employers, August 2018 to July 2019
+                      </a></h2>
                       <p class="metadata">
                         <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">2.3MB</span>,
                         <span class="page-length">59 pages</span>
@@ -339,54 +415,11 @@
                         </p>
                       </div>
                     </div>
-                  </section>
+                </section>
 
-                  <!-- PROVIDERS -->
-                  {% set _providerManual = myData.latestProviderManual %}
-                  {% if myData.useLatestManual == "false" %}
-                    {% if myData.manuals[myData.manual].type == "provider" %}
-                      {% set _providerManual = myData.manuals[myData.manual].id %}
-                    {% endif %}
-                  {% endif %}
-                  
-                  <section class="attachment embedded" id="attachment_2875833">
-                    <div class="attachment-thumb">
-                      <a aria-hidden="true" class="thumbnail" href="manual-home?manual={{_providerManual}}"><img
-                          alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
-                    </div>
-                    <div class="attachment-details">
-                      <h2 class="title"><a href="manual-home?manual={{_providerManual}}">Apprenticeship funding: rules and guidance for training providers</a></h2>
-                      <p class="metadata">
-                        <span class="type">HTML</span>
-                      </p>
-                    </div>
-                  </section>
-                  <section class="attachment embedded" id="attachment_2875834">
-                      <div class="attachment-thumb">
-                        <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
-                      </div>
-                      <div class="attachment-details">
-                        <h2 class="title"><a aria-describedby="attachment-2875834-accessibility-help" href="/public/downloads/1819_Provider_Rules_v1.0.pdf">Apprenticeship funding: rules and guidance for training providers</a></h2>
-                        <p class="metadata">
-                          <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">2.3MB</span>,
-                          <span class="page-length">72 pages</span>
-                        </p>
-    
-                        <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
-                          <h2>This file may not be suitable for users of assistive technology.
-                            <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
-                              data-expanded="false">Request an accessible format.</a>
-                          </h2>
-                          <p id="attachment-2875834-accessibility-request" class="js-hidden">
-                            If you use assistive technology (such as a screen reader) and need a
-                            version of this document in a more accessible format, please email <a href="#">sde.servicedesk@education.gov.uk</a>.
-                            Please tell us what format you need. It will help us if you say what assistive technology you
-                            use.
-    
-                          </p>
-                        </div>
-                      </div>
-                  </section>
+                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
+                    Employer-providers
+                  </h2>
 
                   <!-- EMPLOYER PROVIDERS -->
                 <section class="attachment embedded" id="attachment_2875832">
@@ -394,7 +427,11 @@
                     <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
                   </div>
                   <div class="attachment-details">
-                    <h2 class="title"><a href="#">Apprenticeship funding: rules and guidance for employer-providers</a></h2>
+                    <h2 class="title">
+                      <a href="#">
+                        PDF: Apprenticeship funding rules for employer-providers, August 2018 to July 2019
+                      </a>
+                    </h2>
                     <p class="metadata">
                       <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">1.33MB</span>,
                       <span class="page-length">67 pages</span>
@@ -415,38 +452,9 @@
                   </div>
                 </section>
 
-                <!-- Performace mgmt rules -->
-                <section class="attachment embedded" id="attachment_2875835">
-                  <div class="attachment-thumb">
-                    <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
-                  </div>
-                  <div class="attachment-details">
-                    <h2 class="title"><a href="#">Apprenticeship performance-management rules for training providers
-                      </a></h2>
-                    <p class="metadata">
-                      <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">633KB</span>,
-                      <span class="page-length">16 pages</span>
-                    </p>
-                    <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
-                        <h2>This file may not be suitable for users of assistive technology.
-                          <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
-                            data-expanded="false">Request an accessible format.</a>
-                        </h2>
-                        <p id="attachment-2875834-accessibility-request" class="js-hidden">
-                          If you use assistive technology (such as a screen reader) and need a
-                          version of this document in a more accessible format, please email <a href="#">sde.servicedesk@education.gov.uk</a>.
-                          Please tell us what format you need. It will help us if you say what assistive technology you
-                          use.
-  
-                        </p>
-                      </div>
-
-                  </div>
-                </section>
-
               </div>
             </div>
-            <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="details-title">Details</h2>
+            <!-- <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="details-title">Details</h2>
             <div aria-labelledby="details-title">
 
               <div class="gem-c-govspeak govuk-govspeak direction-ltr">
@@ -456,9 +464,7 @@
                     The funding rules cover the period August 2018 to July 2019 and apply to all apprenticeship
                     programmes starting on or after 1 August 2018. This includes both apprenticeship frameworks and
                     standards.</p>
-
                   <h2 id="help-and-support">Help and support</h2>
-
                   <p>Training providers can contact us through our business operations service desk at <a href="#">SDE.servicedesk@education.gov.uk</a>
                     or telephone 0370 267 0001. You can also contact your provider management manager/adviser.</p>
 
@@ -467,7 +473,7 @@
                 </div>
               </div>
 
-            </div>
+            </div> -->
 
           </div>
 
@@ -508,7 +514,7 @@
               <h2 class="gem-c-taxonomy-navigation__heading">Related content</h2>
               <div data-track-count="sidebarTaxonSection">
                 <h3 class="gem-c-taxonomy-navigation__heading">
-                  <a class="gem-c-taxonomy-navigation__link" href="#">Apprenticeships funding</a>
+                  <a class="gem-c-taxonomy-navigation__link" href="https://www.gov.uk/education/apprenticeships-funding">Apprenticeships funding</a>
                 </h3>
 
                 <p class="gem-c-taxonomy-navigation__taxon-description">
