--- a/app/views/includes/manual-header-2.html
+++ b/app/views/includes/manual-header-2.html
@@ -16,6 +16,9 @@
             <li class="govuk-breadcrumbs__list-item" aria-current="false">
                 <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/apprenticeships-funding">Apprenticeships funding</a>
             </li>
+            <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                <a class="govuk-breadcrumbs__link" aria-current="false" href="rules-list">Apprenticeship funding and performance management rules, August 2018 to July 2019</a>
+            </li>
         </ol>
     </div>
 </div>
