added margin above home page update tags

--- a/app/views/6-0/manual-home.html
+++ b/app/views/6-0/manual-home.html
@@ -164,7 +164,7 @@
                             {{section.summary|safe}}
                         </span>
                         {% endif %}
-                        <strong class="update-tag govuk-tag" style="margin-right: 5px; background: #005ea5">
+                        <strong class="update-tag govuk-tag" style="margin-top: 5px; margin-right: 5px; background: #005ea5">
                             Edited in 2018
                         </strong>
                     </a>
