--- a/app/views/6-0/manual-setup.html
+++ b/app/views/6-0/manual-setup.html
@@ -60,8 +60,9 @@
                 </div>
 
                 <p class="govuk-body" id="start-url" style="display:none">
-                    <a href="" class="govuk-button">Start manual prototype</a>
+                    <a href="#" role="button" draggable="false" class="govuk-button">Start manual prototype</a>
                 </p>
+
                 <p class="govuk-body" >
                     <span class="govuk-!-font-weight-bold">Shareable link:</span><br>
                     <span class="govuk-body" id="start-url-label" style="display:none"></span>
