--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,22 +1,42 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototype</h1>
+    </div>
+</div>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
             <li>
                 <a href="/6-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-6-0</a>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">collection/document list page</span> - grouped documents by target user with headings changed e.g. “Training providers", page title, page intro paragraph (moved details from base of page into it), document file names, HTML document thumbnail icon, adding “PDF: ” before the PDF document names</li>
+                </ul>
             </li>
             <li>
                 <a href="/5-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-5-0</a>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">header</span> - sub heading added containing the year, extra metadata line added containing version number and 'see all versions' link</li>
+                    <li><span class="govuk-!-font-weight-bold">notification emails</span> - updated to be more accurate to real life designs plus a new variant</li>
+                    <li><span class="govuk-!-font-weight-bold">chapter snippets</span> - added</li>
+                </ul>
             </li>
             <li>
                 <a href="/4-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-4-0</a>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">updates</span> - checkbox filter added</li>
+                    <li><span class="govuk-!-font-weight-bold">notifications</span> - link/label to sign up added</li>
+                    <li><span class="govuk-!-font-weight-bold">other formats</span> - link/label design updated</li>
+                </ul>
             </li>
             <li>
                 <a href="/3-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-3-0</a> (tested: 10-21/12/2018)
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">other formats</span> - link/label added</li>
+                </ul>
             </li>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <li>
@@ -24,6 +44,35 @@
             </li>
             <li>
                 <a href="/prototypes/round-1/index" class="govuk-link govuk-link--no-visited-state">V-1-0</a> (tested: 22-29/10/2018)
+            </li>
+        </ul>
+    </div>
+    <div class="govuk-grid-column-one-third">
+        <h2 class="govuk-heading-m">Manual data</h2>
+        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+            <li>
+                <span class="govuk-!-font-weight-bold">Employers - 2</span>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li>section snippets added</li>
+                    <li>chapter names updated</li>
+                </ul>
+            </li>
+            <li>
+                <span class="govuk-!-font-weight-bold">Employers - original</span>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li>missing chapter headings added (without their rules contents)</li>
+                </ul>
+            </li>
+            <li>
+                <span class="govuk-!-font-weight-bold">Providers - 3</span>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li>section snippets updated</li>
+                </ul>
+            </li>
+            <li><span class="govuk-!-font-weight-bold">Providers - 2 - Updated English and Maths</span>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li>section snippets added</li>
+                </ul>
             </li>
         </ul>
     </div>
